<resources>
    <string name="app_name">Learning blocks</string>
    <string name="LoremTitle">لورم ایپسوم متن ساختگی</string>
    <string name="phoneNumberHint">+12 345 6789</string>
    <string name="next">Next</string>
    <string name="RegisterNewAccount">Register Profile</string>
    <string name="name">Name</string>
    <string name="LastName">Last Name</string>
    <string name="RulesAndPolicy">Accept the Terms of Service and Privacy Policy</string>
    <string name="Read">Read</string>
    <string name="Dashboard">Dashboard</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome">Welcome!</string>
    <string name="SearchActivities">Search Activities</string>
    <string name="RecentActivities">Recent Activities</string>
    <string name="NewInBlog">The latest blog</string>
    <string name="MoreItem">More blog</string>
    <string name="update">Update</string>
    <string name="updateText">There is new version of Learning blocks please update.</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="internetError">Please turn on the internet</string>
    <string name="internetErrorTitle">Failed connection</string>
    <string name="serverErrorTitle">Server Error</string>
    <string name="severError">Failed to connect to server please try again</string>
    <string name="waiteForSms">Wait for the SMS</string>
    <string name="wrongCode">Invalid code</string>
    <string name="enterNameAndLastName">Enter first and last name</string>
    <string name="policyError">Read and confirm Terms of Service and Privacy Policy</string>
    <string name="activePremium">Premium Account</string>
    <string name="theTime">Expire in: </string>
    <string name="remainder">days</string>
    <string name="ActivePremium">Upgrade to full access of Learning Blocks</string>
    <string name="notFound404">Error 404</string>
    <string name="activityNotFound">The activity does not exist</string>
    <string name="returnBack">Return</string>
    <string name="forbiddenAccess">Access denied</string>
    <string name="ActivityForbiddenAccess">You must have a premium account to view the content of this page</string>
    <string name="buyPremium">Upgrade To Premium</string>
    <string name="UpgradeToPremium">Upgrade To Premium</string>
    <string name="ActivitiesSearchTitle">Search activities</string>
    <string name="ActivitiesSearchHint">Enter the name of the activity you want</string>
    <string name="CategoriesSearchTitle">Search Categories</string>
    <string name="CategoriesSearchHint">Enter the name of the category you want</string>
    <string name="MoneyUnit">Dollar</string>
    <string name="ago">ago</string>
    <string name="LogOutConfirmation">Do you want to log out of your account?</string>
    <string name="invalidNumber">Invalid Number</string>
</resources>