<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DashboardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:elevation="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/SearchTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/tx_tavan_fa"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/DashboardBookMark"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_bookmark_o"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_dashboard_curve_cover"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/DashboordUserBtn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/shape_r13_bgaccent_alfa"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_user"
                        android:tint="@color/colorAccent"
                        app:layout_constraintBottom_toBottomOf="@+id/DashboordUserBtn"
                        app:layout_constraintEnd_toEndOf="@+id/DashboordUserBtn"
                        app:layout_constraintStart_toStartOf="@+id/DashboordUserBtn"
                        app:layout_constraintTop_toTopOf="@+id/DashboordUserBtn" />

                    <TextView
                        android:id="@+id/DahsboardUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/bold"
                        android:text="مهدی میرشاهی"
                        android:textColor="@color/textPrimary"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="@+id/DashboordUserBtn"
                        app:layout_constraintStart_toStartOf="@+id/DashboordUserBtn"
                        app:layout_constraintTop_toBottomOf="@+id/DashboordUserBtn" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="80dp"
                        android:fontFamily="@font/medium"
                        android:text="@string/Welcome"
                        android:textColor="@color/textBlack"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                        app:layout_constraintEnd_toEndOf="@+id/DahsboardUserName"
                        app:layout_constraintStart_toStartOf="@+id/DahsboardUserName"
                        app:layout_constraintTop_toBottomOf="@+id/DahsboardUserName"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:translationY="-40dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/DahsboardPremiumeBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16sp"
                        android:background="@drawable/shape_strokeprimarydark_r40">

                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_crown" />

                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:gravity="left|center"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/imageView13"
                            app:layout_constraintStart_toEndOf="@+id/imageView12"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/DahsboardPremiumTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:fontFamily="@font/bold"
                                android:text="@string/UpgradeToPremium"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="18dp" />

                            <TextView
                                android:id="@+id/DahsboardPremiumDesc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/regular"
                                android:text="@string/ActivePremium"
                                android:textSize="16dp" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/colorPrimaryDark"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_arrow_horizantal" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="@drawable/shape_strokeblack_r50"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:id="@+id/DahsboardSearch"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                app:srcCompat="@drawable/ic_search" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:fontFamily="@font/medium"
                                android:text="@string/SearchActivities"
                                android:textColor="@color/textBlack"
                                android:textSize="18dp" />




                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/DashboardRecentActTx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginLeft="16dp"
                        android:layout_gravity="left"
                        android:layout_marginBottom="32dp"
                        android:fontFamily="@font/bold"
                        android:text="@string/RecentActivities"
                        android:textColor="@color/textBlack"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/DashboardRecentActRec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="32dp"
                        android:fontFamily="@font/bold"
                        android:text="@string/NewInBlog"
                        android:layout_gravity="left"
                        android:textColor="@color/textBlack"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/DashboardBlogRec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_margin="32dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="2dp">

                        <TextView
                            android:id="@+id/DashboardMoreBlog"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:text="@string/MoreItem"
                            android:textColor="@color/textPrimary"
                            android:textSize="16sp" />
                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="60dp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>